--- a/Builds/VisualStudio2013/Plugins/SpikeSorter/SpikeSorter.vcxproj
+++ b/Builds/VisualStudio2013/Plugins/SpikeSorter/SpikeSorter.vcxproj
@@ -74,7 +74,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
