--- a/Builds/MacOSX/Plugins/Config/Plugin.xcconfig
+++ b/Builds/MacOSX/Plugins/Config/Plugin.xcconfig
@@ -5,6 +5,8 @@ MAC_PACKAGE_DIR = /opt/local
 // Pull in machine-specific settings from git-ignored file, if it exists.
 #include "Env.xcconfig"
 
+#include "Base.xcconfig"
+
 CONFIGURATION_BUILD_DIR = $(PROJECT_DIR)/../../build/$(CONFIGURATION)/open-ephys.app/Contents/PlugIns
 COPY_PHASE_STRIP = NO
 DEBUG_INFORMATION_FORMAT = dwarf
