Fix issues with usb transfer

--- a/Builds/VisualStudio2013/Plugins/IntanRecordingController/IntanRecordingController.vcxproj
+++ b/Builds/VisualStudio2013/Plugins/IntanRecordingController/IntanRecordingController.vcxproj
@@ -37,14 +37,14 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -134,6 +134,7 @@
     <ClCompile Include="..\..\..\..\Source\Plugins\IntanRecordingController\rhythm-api\rhd2000datablockusb3.cpp" />
     <ClCompile Include="..\..\..\..\Source\Plugins\IntanRecordingController\rhythm-api\rhd2000evalboardusb3.cpp" />
     <ClCompile Include="..\..\..\..\Source\Plugins\IntanRecordingController\rhythm-api\rhd2000registersusb3.cpp" />
+    <ClCompile Include="..\..\..\..\Source\Plugins\IntanRecordingController\USBThread.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Source\Plugins\IntanRecordingController\RHD2000Editor.h" />
@@ -142,6 +143,7 @@
     <ClInclude Include="..\..\..\..\Source\Plugins\IntanRecordingController\rhythm-api\rhd2000datablockusb3.h" />
     <ClInclude Include="..\..\..\..\Source\Plugins\IntanRecordingController\rhythm-api\rhd2000evalboardusb3.h" />
     <ClInclude Include="..\..\..\..\Source\Plugins\IntanRecordingController\rhythm-api\rhd2000registersusb3.h" />
+    <ClInclude Include="..\..\..\..\Source\Plugins\IntanRecordingController\USBThread.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
