--- a/Builds/VisualStudio2017/Plugins/PulsePalOutput/PulsePalOutput.vcxproj.filters
+++ b/Builds/VisualStudio2017/Plugins/PulsePalOutput/PulsePalOutput.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="..\..\..\..\Source\Plugins\PulsePalOutput\serial\PulsePal.h">
       <Filter>Source Files\serial</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\Source\Plugins\PulsePalOutput\PulsePalOutputCanvas.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
