remove dsplib dependency

--- a/Builds/VisualStudio2013/Plugins/FilterNode/FilterNode.vcxproj
+++ b/Builds/VisualStudio2013/Plugins/FilterNode/FilterNode.vcxproj
@@ -87,7 +87,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>DspLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
