--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.5.0)
 
 project(open-ephys-plugins)
 set(PLUGIN_HEADER_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Headers)
+set(CMAKE_SHARED_LIBRARY_PREFIX "")
 
 set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS
 			OEPLUGIN
