--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ PluginGenerator/Builds/VisualStudio2013/*.user
 PluginGenerator/Builds/VisualStudio2013/*.sdf
 PluginGenerator/Builds/VisualStudio2013/*.opensdf
 PluginGenerator/Builds/VisualStudio2013/*.suo
+Projucer/**/build
 
 # 3. extra files
 Builds/Linux/build/data
@@ -98,7 +99,7 @@ Builds/VisualStudio2013/Plugins/Debug
 Builds/VisualStudio2013/Plugins/Release
 Builds/VisualStudio2013/Plugins/x64
 
-Build/
+
 
 # 5. Miscellanous generated files (Doxygen, etc.)
 Source/Docs/*
@@ -153,7 +154,7 @@ xcuserdata/
 PluginGenerator/Builds/MacOSX/OpenEphys_PluginGenerator.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 
 # 9. Plugin build dirs
-build/
+Builds/**/build/
 
 /Builds/MacOSX/Plugins/Config/Env.xcconfig
 #10. git conflict resolution files
