First work to support XCode with CMAke

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,22 @@ elseif(LINUX)
 	
 elseif(APPLE)
 	set_property(TARGET open-ephys PROPERTY RUNTIME_OUTPUT_DIRECTORY ${BASE_BUILD_DIRECTORY}/XCode)
+	set_target_properties(open-ephys PROPERTIES
+		MACOSX_BUNDLE_NAME open-ephys
+		MACOSX_BUNDLE_VERSION ${GUI_VERSION}
+		MACOSX_BUNDLE_GUI_IDENTIFIER "org.open-ephys.gui"
+		MACOSX_BUNDLE_ICON_FILE "${RESOURCES_DIRECTORY}/Build-files/Icon.icns"
+		MACOSX_BUNDLE_INFO_PLIST "${RESOURCES_DIRECTORY}/Build-files/Info.plist.in"
+		MACOSX_BUNDLE TRUE
+		)
+	target_compile_options(open-ephys PRIVATE -fPIC -Wpartial-availability -Wno-inconsistent-missing-override -rdynamic)
+	set_property(TARGET open-ephys APPEND_STRING PROPERTY LINK_FLAGS "-fPIC -rdynamic")
+	target_link_libraries(open-ephys dl)
+	
+	set_target_properties(open-ephys PROPERTIES
+		XCODE_ATTRIBUTE_DEBUG_INFORMATION_FORMAT dwarf
+		)
+	
 else()
 	message( FATAL_ERROR "Unsupported OS")
 endif()
